--- a/gradle.properties
+++ b/gradle.properties
@@ -19,4 +19,4 @@ org.gradle.jvmargs=-Xmx1536m
 # Application模式，Robust需要是Application才能插入代码和打补丁
 isAppModule=true
 # Application模式下开启这个就可以打补丁
-isPatchModule=true
+isPatchModule=false
