--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+*.iml
+.gradle
+/local.properties
+.DS_Store
+/build
+/captures
+.idea
+
+
 # Built application files
 *.apk
 *.ap_
@@ -41,7 +50,7 @@ captures/
 .idea/libraries
 
 # Keystore files
-*.jks
+#*.jks
 
 # External native build folder generated in Android Studio 2.2 and later
 .externalNativeBuild
