完成接入教程的编写

--- a/sdk/build.gradle
+++ b/sdk/build.gradle
@@ -34,8 +34,27 @@ android {
         flavorDimensions "test"
 
     }
-    buildTypes {
+    // 签名的配置
+    signingConfigs {
+        debug {
+
+        }
+        // release版本的签名
         release {
+            // 签名的一些信息
+            keyAlias '12345678'
+            keyPassword '12345678'
+            storeFile file('./oubowu_test_sign.jks')
+            storePassword '12345678'
+        }
+    }
+    buildTypes {
+        debug {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+        release {
+            signingConfig signingConfigs.release
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
@@ -85,31 +104,32 @@ android {
 }
 
 dependencies {
-    if (isAppModule.toBoolean()) {
-        // 制作补丁的时候需要第三方jar包不能打入apk里面，因为我们要去apk对应生成的jar包，由此避免宿主与我们sdk造成第三方jar包冲突
-        compileOnly fileTree(dir: 'libs', include: ['*.jar'])
-    } else {
-        // library模式的话，打release混淆包的话也会把第三方jar包打进去，由此不要compile
-        implementation fileTree(dir: 'libs', include: ['*.jar'])
-    }
+
+    // 避免宿主与我们sdk造成第三方jar包冲突，本地依赖第三方jar包不打入sdk模块的jar包
+    compileOnly fileTree(dir: 'libs', include: ['*.jar'])
+
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     testImplementation 'junit:junit:4.12'
-    // 制作补丁的时候需要robust需要打入包里面，不用宿主再去compile，这样sdk的热修复宿主无感知
+
+    // 制作补丁的时候robust打入jar包里面，不用宿主再去compile，这样sdk的热修复对于宿主无感知
     implementation 'com.meituan.robust:robust:0.4.71'
-    // 远程依赖aar包的话不支持provided这种形式，由此需要在打jar包的时候过滤掉
-    api 'com.orhanobut:logger:2.1.1'
-    //bmob-sdk
+
+    // 远程依赖aar包的话不支持provided或者compileOnly形式，由此需要在自定义task打jar包的时候过滤掉
+    implementation 'com.orhanobut:logger:2.1.1'
+
+    // 与依赖logger同理
     implementation 'cn.bmob.android:bmob-sdk:3.5.8'
+
+    // secret.jar由secret模块输出的jar包，直接打入sdk模块的jar包，使用api而不是implementation是因为在app模块有直接使用secret里面的方法，因此暴露此依赖
     api files('libs/secret.jar')
+
 }
 
 ///////////////////////////////////////////////////////////////////////////
 // 以下是适用于Robust打包的所有task
 ///////////////////////////////////////////////////////////////////////////
-
-Pattern p = Pattern.compile("^assemble(.*)Release\$")
 
 //读取文件并替换字符串
 static def fileReader(path, oldStr, newStr) {
@@ -150,21 +170,31 @@ static def createDir(String destDirName) {
 // 根据渠道生成打jar包和aar包的对应的task
 for (String flavor : android.productFlavors.names) {
 
+    // 遍历所有渠道，生成对应渠道打jar包的task，名字为jar_(渠道)
     tasks.create(name: 'jar_' + flavor, type: Jar) {
 
         println "当前渠道是：" + flavor
 
+        // jar包命名为classes.jar
         baseName 'classes'
 
         String intermediatesPath = buildDir.toString() + File.separator + "intermediates"
+
+        // gradle-2.3.3 & robust-0.4.7对应的路径为 \sdk\build\intermediates\transforms\proguard\(渠道)\release\jars\3\1f\main.jar
         // String robustJarPath = intermediatesPath + File.separator + "transforms" + File.separator + "proguard" + File.separator + flavor + File.separator + "release" + File.separator + "jars" + File.separator + "3" + File.separator + "1f" + File.separator + "main.jar"
+
+        // gradle-3.0.0 & robust-0.4.71对应的路径为 \sdk\build\intermediates\transforms\proguard\(渠道)\release\0.jar
         String robustJarPath = intermediatesPath + File.separator + "transforms" + File.separator + "proguard" + File.separator + flavor + File.separator + "release" + File.separator + "0.jar"
+
         def zipFile = new File(robustJarPath)
+        // 将jar包解压
         FileTree jarTree = zipTree(zipFile)
 
         from jarTree
 
+        // jar包输出路径为 \sdk\robustjar\(渠道)\release\origin
         File destDir = file(projectDir.toString() + File.separator + 'robustjar' + File.separator + flavor + File.separator + 'release' + File.separator + 'origin')
+        // 设置输出路径
         setDestinationDir destDir
 
         include {
@@ -173,17 +203,23 @@ for (String flavor : android.productFlavors.names) {
         }
 
         exclude {
-             println "执行排除：" + it.path
+            // println "执行排除：" + it.path
+            // 排除R相关class文件，排除MainActivity.class文件
             it.path.startsWith('com/oubowu/sdk/R$') || it.path.startsWith('com/oubowu/sdk/R.class') || it.path.startsWith('com/oubowu/sdk/MainActivity.class')
         }
 
         println '压缩jar包完毕！！！！！！！！'
     }
 
+    // 遍历所有渠道，生成对应渠道打aar包的task，名字为aar_(渠道)
     tasks.create(name: 'aar_' + flavor, type: Zip) {
+        // aar包输出路径为 \sdk\robustjar\(渠道)\release\aar
         File destDir = file(projectDir.toString() + File.separator + 'robustjar' + File.separator + flavor + File.separator + 'release' + File.separator + 'aar')
+        // aar包命名为 library-(渠道)-release.aar
         archiveName 'library-' + flavor + '-release.aar'
+        // 源路径为 \sdk\robustjar\(渠道)\release\origin
         from projectDir.toString() + File.separator + 'robustjar' + File.separator + flavor + File.separator + 'release' + File.separator + 'origin'
+        // 设置压缩后输出的路径
         destinationDir destDir
 
         println '压缩aar包完毕！！！！！！！！'
@@ -191,36 +227,61 @@ for (String flavor : android.productFlavors.names) {
 
 }
 
+// 项目打release版本apk包的话，必然会调用到assemble(渠道)Release的命令，于是我们可以用正则匹配来匹配所有渠道的打Release包过程
+Pattern p = Pattern.compile("^assemble(.*)Release\$")
+
+// 在task添加到列表的时候，进行打包task的匹配
 tasks.whenTaskAdded { task ->
     if (!isAppModule.toBoolean()) {
         // 不是Application模式不处理
         return
     }
-    // 在任务执行的时候，只要是执行assemble(渠道)Release的打APK任务，从robust同时打插桩的jar包的路径复制jar包到指定路径\build\outputs\robustjar\渠道\xxxx.jar
+    // 在任务执行的时候，匹配执行assemble(渠道)Release的打APK任务
     Matcher m = p.matcher(task.name)
     if (m.find()) {
+        // 取出渠道
         String flavor = m.group(1)
         if (flavor.length() > 1) {
+            // 渠道命名的修正，首字母小写，例如develop渠道对应命令为assembleDevelopRelease
             flavor = flavor.substring(0, 1).toLowerCase() + flavor.substring(1)
         }
 
-        // 打release包之后进行资源的整合以及jar包去指定class文件，并且生成aar包
+        // 打release包task完成之后进行资源的整合以及jar包去指定class文件，并且生成aar包
         task.doLast {
 
             delete {
+                // 删除上次生成的文件目录，目录为 \sdk\robustjar\(渠道)\release
                 delete projectDir.toString() + File.separator + 'robustjar' + File.separator + flavor + File.separator + "release"
             }
 
+            // 打包所需资源所在的父目录， \sdk\build\intermediates
             String intermediatesPath = buildDir.toString() + File.separator + "intermediates"
 
-            String robustJarPath = intermediatesPath + File.separator + "transforms" + File.separator + "proguard" + File.separator + flavor + File.separator + "release" + File.separator + "0.jar"/*+ File.separator + "jars" + File.separator + "3" + File.separator + "1f" + File.separator + "main.jar"*/
+            // gradle-3.0.0 & robust-0.4.71对应的路径为 \sdk\build\intermediates\transforms\proguard\(渠道)\release\0.jar
+            String robustJarPath = intermediatesPath + File.separator + "transforms" + File.separator + "proguard" + File.separator + flavor + File.separator + "release" + File.separator + "0.jar"
+
+            // gradle-2.3.3 & robust-0.4.7对应的路径为 \sdk\build\intermediates\transforms\proguard\(渠道)\release\jars\3\1f\main.jar
+            // String robustJarPath = intermediatesPath + File.separator + "transforms" + File.separator + "proguard" + File.separator + flavor + File.separator + "release" + File.separator + "jars" + File.separator + "3" + File.separator + "1f" + File.separator + "main.jar"
+
+            // 资源文件的路径，\sdk\build\intermediates\assets\(渠道)\release
             String assetsPath = intermediatesPath + File.separator + "assets" + File.separator + flavor + File.separator + "release"
+
+            // 依赖本地jar包路径，\sdk\build\intermediates\jniLibs\(渠道)\release
             String libsPath = intermediatesPath + File.separator + "jniLibs" + File.separator + flavor + File.separator + "release"
+
+            // res资源文件的路径，\sdk\build\intermediates\res\merged\(渠道)\release，经测试发现此目录下生成的.9图片会失效，因此弃置，换另外方式处理
             // String resPath = intermediatesPath + File.separator + "res" + File.separator + "merged" + File.separator + flavor + File.separator + "release"
+
+            // 由于上述问题，直接用项目的res路径 \sdk\src\main\res ，因此第三方依赖的资源文件无法整合，但是我是基于生成只包含自身代码的jar包和资源，其余依赖宿主另外再依赖的方案，所以可以这样处理
             String resPath = projectDir.toString() + File.separator + "src" + File.separator + "main" + File.separator + "res"
+
+            // 资源id路径，\sdk\build\intermediates\symbols\(渠道)\release
             String resIdPath = intermediatesPath + File.separator + "symbols" + File.separator + flavor + File.separator + "release"
+
+            // 清单文件路径，\sdk\build\intermediates\manifests\full\(渠道)\release，由于是生成的application的清单文件，因此下面还会做删除组件声明的处理
             String manifestPath = intermediatesPath + File.separator + "manifests" + File.separator + "full" + File.separator + flavor + File.separator + "release"
 
+            // 整合上述文件后的目标路径，\sdk\robustjar\(渠道)\release\origin
             String destination = projectDir.toString() + File.separator + /*'outputs' + File.separator +*/ 'robustjar' + File.separator + flavor + File.separator + 'release' + File.separator + 'origin'
 
             // 貌似aidl的文件夹没啥用，打包会根据例如G:\\sms-hotfix\\SmsParsingForRcs-Library\\library\\src\\main\\aidl\\com\\cmic\\IMyAidlInterface.aidl的定义代码生成com.cmic.IMyAidlInterface到jar包里面，因此aidl仅仅是空文件夹
@@ -230,85 +291,109 @@ tasks.whenTaskAdded { task ->
             if (file.exists()) {
                 println '渠道是：' + flavor + '；开始复制robust插桩jar包'
                 copy {
+
+                    // 拷贝到assets目录
                     from(assetsPath) {
                         into 'assets'
                     }
-//                    from(libsPath) {
-//                        into 'libs'
-//                        include '**/*.jar'
-//                        exclude {
-//                            // println it.path+";"+it.isDirectory()
-//                            it.isDirectory()
-//                        }
-//                    }
+
+                    //  第三方本地jar包不处理，提供宿主集成的时候另外提供
+                    //  from(libsPath) {
+                    //      into 'libs'
+                    //      include '**/*.jar'
+                    //      exclude {
+                    //          // println it.path+";"+it.isDirectory()
+                    //          it.isDirectory()
+                    //      }
+                    //  }
+
+                    // .so文件拷贝到jni目录
                     from(libsPath) {
                         into 'jni'
                         include '**/*/*.so'
                     }
+
+                    // 资源文件拷贝到res目录
                     from(resPath) {
+                        // 排除MainActivity加载的布局文件，因为输出的是jar包，加MainActivity仅仅是为了能让打apk包任务执行
                         exclude '/layout/activity_main.xml'
                         exclude {
+                            // 排除空文件夹
                             it.isDirectory() && it.getFile().listFiles().length == 0
                         }
                         into 'res'
                     }
+
+                    // aidl的文件夹没啥用，不处理
                     // from(aidlPath) {
                     //     into 'aidl'
                     // }
+
+                    // 拷贝此目录下资源id文件 R.txt
                     from resIdPath
 
+                    // 拷贝到目录 \sdk\robustjar\(渠道)\release\origin
                     into destination
 
                 }
 
                 copy {
-                    // 复制供宿主的混淆规则
+                    // 复制供宿主的混淆规则，这里我在android{ defaultConfig { consumerProguardFiles 'lib-proguard-rules.pro' }}，配置了一个混淆规则
                     def files = android.defaultConfig.consumerProguardFiles
-//                    println '混淆文件路径：'+files.size()
                     if (files != null && files.size() > 0) {
                         def file1 = files.get(0);
-//                        println '混淆文件路径：'+file1.path
-                        from file1
-//                        rename 'proguard.txt'
-//                        into destination
+                        //  println '混淆文件路径：'+file1.path
                         from file1.path
                         into destination
+                        // 复制混淆规则并且重命名
                         rename(file1.name, 'proguard.txt')
-
                     }
                 }
 
-
+                // 补丁生成需要的mapping.txt和methodsMap.robust文件
                 copy {
+                    // 混淆mapping文件的路径，\sdk\build\outputs\mapping\(渠道)\release\mapping.txt
                     from(buildDir.toString() + File.separator + 'outputs' + File.separator + 'mapping' + File.separator + flavor + File.separator + 'release') {
                         include 'mapping.txt'
                     }
-
+                    // 拷贝到目录 \sdk\robustjar\(渠道)\release
                     into projectDir.toString() + File.separator + 'robustjar' + File.separator + flavor + File.separator + 'release'
                 }
 
                 copy {
+                    // robust生成的methodsMap文件路径，\sdk\build\outputs\robust\methodsMap.robust
                     from(buildDir.toString() + File.separator + 'outputs' + File.separator + 'robust') {
                         include 'methodsMap.robust'
                     }
-
+                    // 拷贝到目录 \sdk\robustjar\(渠道)\release
                     into projectDir.toString() + File.separator + 'robustjar' + File.separator + flavor + File.separator + 'release'
                 }
 
+                // 若不存在aidl目录，创建aidl空目录
                 createDir(destination + File.separator + "aidl")
+                // 同上
                 createDir(destination + File.separator + "assets")
+                // 同上
                 createDir(destination + File.separator + "jni")
+                // 同上
                 createDir(destination + File.separator + "libs")
+                // 同上
                 createDir(destination + File.separator + "res")
 
+                // 将清单文件application节点的内容和activity节点的内容替换
                 def oldStr = ["<application[\\s\\S]*?>", "<activity[\\s\\S]*?</activity>"]
                 def newStr = ["<application\n" + "        android:allowBackup=\"true\"\n" + "        android:supportsRtl=\"true\">", ""]
+                // 处理 \sdk\build\intermediates\manifests\full\(渠道)\release\AndroidManifest.xml
                 String strBuffer = fileReader(manifestPath + File.separator + "AndroidManifest.xml", oldStr, newStr)
+                // 输出至 \sdk\robustjar\(渠道)\release\origin\AndroidManifest.xml
                 fileWrite(destination + File.separator + "AndroidManifest.xml", strBuffer)
+
                 println '输出robust插桩jar包成功!'
 
+                // 执行打jar包的task，这里会做原jar包的过滤处理，只保留我们需要的代码
                 tasks.findByName('jar_' + flavor).execute()
 
+                // 执行打aar包的task，其实就是将目录\sdk\robustjar\develop\release\origin压缩成aar后缀的压缩包
                 tasks.findByName('aar_' + flavor).execute()
 
             }
